--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack server --env development"
+    "dev": "webpack server --env development",
+    "build": "webpack"
   },
   "author": "ingoo",
   "license": "ISC",
